--- a/main.tex
+++ b/main.tex
@@ -62,7 +62,7 @@
 \section{Foreword}
 In transitioning to advanced classes, a physics student will find their familiar mathematical tools are inadequate to describe certain physical phenomena. The methods of traditional vector calculus in three dimensions, though very useful in electromagnetism and classical mechanics, are not always usable in higher dimensions, such as those used in general relativity and Hamiltonian mechanics. For that, we need differential geometry. When trying to learn a subject in mathematics, however, you tend to find books written for mathematicians, in a language that mathematicians are familiar with. As such, they are filled with long definitions, proofs, and prose that, while mathematically very precise, isn't exactly light reading, and can even be overkill for a proper physical understanding. 
 
-When mathematicians write for mathematicians, they develop and motivate their mathematical tools for the purposes of ease of calculation and proofs. There is, of course, nothing wrong with this. Mathematicians ought to be writing for mathematicians, and we shouldn't try to force the constraints of our field on theirs. For physicists, however, proofs and ease of calculation are not the fundamental problems. Rather, we are trying to mathematically codify, organize, and characterize physical phenomena. The math that we use, therefore, ought to be entirely physically motivated. When the math is developed properly for our purposes in physics, there shouldn't be any "purely mathematical" constructs without an actual physical meaning. We do not claim that we have fully achieved this goal here,\footnote{This is the greater goal of the Assumptions of Physics project as a whole} as there are open, unresolved problems in our work here, which will be addressed here when appropriate. 
+When mathematicians write for mathematicians, they develop and motivate their mathematical tools for the purposes of ease of calculation and proofs. There is, of course, nothing wrong with this. Mathematicians ought to be writing for mathematicians, and we shouldn't try to force the constraints of our field on theirs. For physicists, however, proofs and ease of calculation are not the fundamental problems. Rather, we are trying to mathematically codify, organize, and characterize physical phenomena. The math that we use, therefore, ought to be entirely physically motivated. When the math is developed properly for our purposes in physics, there shouldn't be any "purely mathematical" constructs without an actual physical meaning. We do not claim that we have fully achieved this goal here,\footnote{This is the greater goal of the Assumptions of Physics project as a whole} as there are open, unresolved problems in our work, which will be addressed when appropriate. 
 What follows is a purely physical treatment of differential topology used in physics. While it is less mathematically rigorous than a typical math textbook, the hope is that the reader will be able to gain an intuition for the math they use, so that the math isn't simply a black box beyond understanding, and that further study in the subject will be aided by a solid grounding here. Furthermore, by clarifying the underlying physical assumptions that we are working with at each step of the way, we will be more certain of the meaning of each of our mathematical tools, as well as the results we are able to derive.  The focus is always on readability, applicability, and physicality.
 
 
@@ -180,7 +180,7 @@ This same process can be done with any arbitrary number of fixed and varying coo
 	A \textbf{coordinate k-surface} is the set of points in $\mathbb{R}^n$ obtained by allowing k quantities to vary and holding (n-k) quantities fixed.  
 \end{defn}
 
-When varying coordinates to creates coordinate lines, surfaces, volumes, etc., the varying can be brought to a halt by the geometry of the object that we're working on. Where the varying ends lies the \textbf{boundary} of our surface. Suppose our manifold is the Earth (the entire Earth, not just the surface). If we assume that we can freely move through the entirety of the Earth's crust, but may not leave the surface of the Earth, we may say that the Earth manifold has a boundary, that being the surface of the Earth. Because radius is held fixed on the surface, the boundary of the Earth has a dimensionality of 2, instead of 3. 
+When varying coordinates to create coordinate lines, surfaces, volumes, etc., the varying can be brought to a halt by the geometry of the object that we're working on. Where the varying ends lies the \textbf{boundary} of our surface. Suppose our manifold is the Earth (the entire Earth, not just the surface). If we assume that we can freely move through the entirety of the Earth's crust, but may not leave the surface of the Earth, we may say that the Earth manifold has a boundary, that being the surface of the Earth. Because radius is held fixed on the surface, the boundary of the Earth has a dimensionality of 2, instead of 3. 
 
 \begin{defn}
 	Given k-surface $\sigma^k \in S^k$, the \textbf{boundary} of $\sigma^k$, denoted by $\partial\sigma^k \in S^{k-1}$ is the limit of varied coordinates. Points lying on the boundary are called \textbf{boundary points.}
@@ -226,7 +226,7 @@ One more specification is necessary: the fact that $f_k$ must commute with the l
 
 If we have a 1-functional $f$, each individual $f(\lambda_i)$, as well as $f(\lambda)$ itself, will separately take on a value. We require that the limit holds, meaning that \begin{gather}  f\left(\lim_{i = 1 \to \infty} \lambda_i\right) = f(\lambda). \end{gather}
 
-To give an example where this condition is not fulfilled, suppose we have a straight line $\lambda$, and we want to determine its length. Say the length and height both equal $a$. Therefore, it's length is $\sqrt{2}a$. However, the length of the horizontal and vertical components together is $2a$. Further subdividing each horizontal and vertical component will create a sequence that does, in the limit, converge to $\lambda$. However, the length of this sequence will always, even in the limit, remain $2a$. Therefore, the length functional does not commute with the limit. 
+To give an example where this condition is not fulfilled, suppose we have a straight line $\lambda$, and we want to determine its length. Say the width and height both equal $a$. Therefore, its length is $\sqrt{2}a$. However, the length of the horizontal and vertical components together is $2a$. Further subdividing each horizontal and vertical component will create a sequence that does, in the limit, converge to $\lambda$. However, the length of this sequence will always, even in the limit, remain $2a$. Therefore, the length functional does not commute with the limit. 
 
 \begin{figure}[h]
 	\includegraphics[scale = .5]{images/length_func_example.png}
@@ -429,7 +429,7 @@ Suppose we have a mass functional $M \in F_3$ and some object $\tau \in S^3$, su
 
 \section{Wedge Product and Perpendicularity}
 
-Consider the problem now of constructing surfaces, volumes, and their higher dimensional equivalents. Arranging two 1-vectors $\vec{a}$ and $\vec{b}$ such that they both share a starting point allows one to construct a paralellogram (a 2-vector) with sides made up of the 1-vectors. The area and orientation of this 2-vector depends on the magnitudes and orientations of the two component 1-vectors. In 3D space, this orientation would be the line normal to the 2-surface, but we are not necessarily in 3D space. By flipping the direction of one of the vectors, the area of the resulting 2-vector would be the same as before, but the orientation (the normal) would be flipped. This same mechanism works for a 1-vector and a 2-vector, creating a 3-vector, as well as for the arbitrary m-vector and n-vector, creating an (m+n)-vector (though for vectors of degree greater than three, this is much harder to visualize). We require also that our method for combining k-vectors is anticommutative or skew-symmetric. To see why it must be this way, consider an x-y plane, where the x is traditionally the horizontal, and y the vertical. Switch now x and y, so that x is now the vertical, and y is now the horizontal. Rotating the axis such that y is once again the vertical will orient the x-axis in the "negative" horizontal direction. You could say that this is a (-x)-y plane. It is thus impossible to go from a y-x plane to an x-y plane purely through rotation. Instead, you need to also flip one of the coordinate axes, meaning x $\to$ -x, or y $\to$ -y. Once that is done, the original x-y plane can be reached can be reached. 
+Consider the problem now of constructing surfaces, volumes, and their higher dimensional equivalents. Arranging two 1-vectors $\vec{a}$ and $\vec{b}$ such that they both share a starting point allows one to construct a paralellogram (a 2-vector) with sides made up of the 1-vectors. The area and orientation of this 2-vector depends on the magnitudes and orientations of the two component 1-vectors. In 3D space, this orientation would be the line normal to the 2-surface, but we are not necessarily in 3D space. By flipping the direction of one of the vectors, the area of the resulting 2-vector would be the same as before, but the orientation (the normal) would be flipped. This same mechanism works for a 1-vector and a 2-vector, creating a 3-vector, as well as for the arbitrary m-vector and n-vector, creating an (m+n)-vector (though for vectors of degree greater than three, this is much harder to visualize). We require also that our method for combining k-vectors is anticommutative or skew-symmetric. To see why it must be this way, consider an x-y plane, where the x is traditionally the horizontal, and y the vertical. Switch now x and y, so that x is now the vertical, and y is now the horizontal. Rotating the axis such that y is once again the vertical will orient the x-axis in the "negative" horizontal direction. You could say that this is a (-x)-y plane. It is thus impossible to go from a y-x plane to an x-y plane purely through rotation. Instead, you need to also flip one of the coordinate axes, meaning x $\to$ -x, or y $\to$ -y. Once that is done, the original x-y plane can be reached. 
 
 \begin{figure}[h]
 	\includegraphics[scale = .5]{images/wedge_prod.png}
@@ -449,13 +449,13 @@ The tool that combines k-vectors antisymmetrically is the \textbf{wedge product}
 
 
 	
- This discussion of joining vectors together and the resulting normal vectors brings to mind a tool from vector calculus: the cross product. If we have two vectors $\vec{a}$ and $\vec{b}$ in $\mathbb{R}^3$, the cross product of them $\vec{a} \times \vec{b}$ will return the vector perpendicular to the two of them. Furthermore, by flipping the order of the product, a minus sign is introduced, indicating that the magnitude is the same, but the orientation is flipped. That is, $\vec{a} \times \vec{b} = -(\vec{b} \times \vec{a})$. It is likely the case that the reader will be more familiar with the cross product, and may be wondering why we will be forgoing it in favor of the less familiar wedge product. This is because the cross product fails to generalize to any space beyond $\mathbb{R}^3$. It is in some sense a specific case of the wedge product, but with some crucial fundamental differences. The cross product depends on there being only one linearly independent direction normal to a surface, which is the case in $\mathbb{R}^3$. In $\mathbb{R}^4$ on the other hand, there are \emph{two} linearly independent directions normal to each surface, and in general n-dimensional space, there will be (n-2) linearly independent perpendiculars. What we do instead is keep track of components using the two directions tangent to the surface, rather than by the direction normal to the surface. As an example, consider the magnetic field $B$. In most treatments of electromagnetism, the magnetic field $B$ is implicitly treated as a pseudeovector. What this means is that $B$ behaves as a vector when undergoing rotation, but when undergoing reflection gains an additional sign flip. $B$ is written out in component form as $B^1 e_1 + B^2 e_2 + B^3 e_3$, where each component is perpendicular to the other two. By saying that we will be keeping track of components using the directions tangent to the surface, what we mean is that instead of writing out $B$ as before, we will instead be writing it as $B^{23} e_2\wedge e_3 + B^{13} e_1\wedge e_3 + B^{12} e_1\wedge e_2$. This notation should bring to mind the electromagnetic field tensor, $F_{\mu\nu}$, the components of which are the electric field and the magnetic field. This is good, as it is this tensor that generalizes to curved spacetime and beyond.\footnote{ Another issue with the cross product is that it requires that angles be defined, from which come perpendicularity and the normal vector, and the reader may have noticed that we have not yet given any notion of angles. Defining angles requires geometric notions that we do not have defined, and are in fact not necessary for our purposes. This speaks to the generality of the tools we are  using, as in most introductory physics topics, such as classical mechanics and electromagnetism, the fact that you have angles and distances is considered a given, and almost fundamental. As we have seen so far, they clearly are not.  } 
+ This discussion of joining vectors together and the resulting normal vectors brings to mind a tool from vector calculus: the cross product. If we have two vectors $\vec{a}$ and $\vec{b}$ in $\mathbb{R}^3$, the cross product of them $\vec{a} \times \vec{b}$ will return the vector perpendicular to the two of them. Furthermore, by flipping the order of the product, a minus sign is introduced, indicating that the magnitude is the same, but the orientation is flipped. That is, $\vec{a} \times \vec{b} = -(\vec{b} \times \vec{a})$. It is likely the case that the reader will be more familiar with the cross product, and may be wondering why we will be forgoing it in favor of the less familiar wedge product. This is because the cross product fails to generalize to any space beyond $\mathbb{R}^3$. It is in some sense a specific case of the wedge product, but with some crucial fundamental differences. The cross product depends on there being only one linearly independent direction normal to a surface, which is the case in $\mathbb{R}^3$. In $\mathbb{R}^4$ on the other hand, there are \emph{two} linearly independent directions normal to each surface, and in general n-dimensional space, there will be (n-2) linearly independent perpendiculars. What we do instead is keep track of components using the two directions tangent to the surface, rather than by the direction normal to the surface. As an example, consider the magnetic field $B$. In most treatments of electromagnetism, the magnetic field $B$ is implicitly treated as a pseudeovector. What this means is that $B$ behaves as a vector when undergoing rotation, but when undergoing reflection gains an additional sign flip. $B$ is written out in component form as $B^1 e_1 + B^2 e_2 + B^3 e_3$, where each component is perpendicular to the other two. By saying that we will be keeping track of components using the directions tangent to the surface, what we mean is that instead of writing out $B$ as before, we will instead be writing it as $B^{23} e_2\wedge e_3 + B^{13} e_1\wedge e_3 + B^{12} e_1\wedge e_2$. This notation should bring to mind the electromagnetic field tensor, $F_{\mu\nu}$, the components of which are the electric field and the magnetic field. This is good, as it is this tensor that generalizes to curved spacetime and beyond.\footnote{ Another issue with the cross product is that it requires that angles be defined, from which come perpendicularity and the normal vector, and the reader may have noticed that we have not yet given any notion of angles. Defining angles requires geometric notions that we have not defined, and are in fact not necessary for our purposes. This speaks to the generality of the tools we are  using, as in most introductory physics topics, such as classical mechanics and electromagnetism, the fact that you have angles and distances is considered a given, and almost fundamental. As we have seen so far, they clearly are not.  } 
 
 
 
 
 
-Just as we can combine k-vectors to create vectors of higher rank, we can also decompose k-vectors into the wedge product of lower rank vectors. A paralellogram, for instance, can be decomposed into the two vectors that define its sides. A cube can be decomposed into the three vectors that define the vertex. And just so with a general infinitesimal parallelepiped. It follows that we can express any k-vector as the wedge product of k 1-vectors. So, if we have $v^k \in V^k$, we can decompose it as $v^k = a^1\wedge a^2 \wedge a^3 \wedge ... \wedge a^k$, where each of the component vectors are in $V^1$. More concisely, this can be written in a product series form as $\wedge^k_{i=1} a^i$. Decomposing k-vectors as we pass them to k-forms, we can write $\omega_k(v^k) = \omega_k(a^1\wedge a^2 \wedge a^3 \wedge ... \wedge a^k) = \omega_k(\wedge^k_{i=1}a^i)$. Flipping the order of any of these products will introduce a minus in the overall product. We can make the wedge product on vectors redundant by imposing its condition of antisymmetry on the k-form itself, and writing the k 1-vectors in a list of arguments as $\omega_k(a^1\wedge a^2 \wedge a^3 \wedge ... \wedge a^k) = \omega_k(a^1, a^2, ..., a^k)$. Thus, we say that a k-form is an alternating function of k 1-vectors. 
+Just as we can combine k-vectors to create vectors of higher rank, we can also decompose k-vectors into the wedge product of lower rank vectors. A paralellogram, for instance, can be decomposed into the two vectors that define its sides. A cube can be decomposed into the three vectors that define the vertex. And just so with a general infinitesimal parallelepiped. It follows that we can express any k-vector as the wedge product of k 1-vectors. So, if we have $v^k \in V^k$, we can decompose it as $v^k = a^1\wedge a^2 \wedge a^3 \wedge ... \wedge a^k$, where each of the component vectors is in $V^1$. More concisely, this can be written in a product series form as $\wedge^k_{i=1} a^i$. Decomposing k-vectors as we pass them to k-forms, we can write $\omega_k(v^k) = \omega_k(a^1\wedge a^2 \wedge a^3 \wedge ... \wedge a^k) = \omega_k(\wedge^k_{i=1}a^i)$. Flipping the order of any of these products will introduce a minus in the overall product. We can make the wedge product on vectors redundant by imposing its condition of antisymmetry on the k-form itself, and writing the k 1-vectors in a list of arguments as $\omega_k(a^1\wedge a^2 \wedge a^3 \wedge ... \wedge a^k) = \omega_k(a^1, a^2, ..., a^k)$. Thus, we say that a k-form is an alternating function of k 1-vectors. 
 
 \begin{prop}
 	K-forms are alternating functions of k 1-vectors, meaning that if $v^k = a^1\wedge a^2 \wedge a^3 \wedge ... a^i \wedge a^j ... \wedge a^k$, then $\omega_k(v^k) = \omega_k(a^1, a^2, a^3, ..., a^i, a^j, ..., a^k) = -\omega_k(a^1, a^2, a^3, ..., a^j, a^i, ..., a^k)$. 
@@ -498,7 +498,7 @@ Forms will be dealt with in a similar way. Let $\omega$ be a covector and $dP$ b
 
 Putting everything together now, for vector dP and k-form $\omega$, $\omega(dP) = \omega_ie^i(dx^je_j) = \omega_i(dx^j)(e^i)e_j = \omega_idx^j\delta^i_j = \omega_i dx^i$. This is an interesting result: a vector and covector together naturally simplify down to a linear combination of infinitesimal segments. 
 
-We note now that we cannot always decompose k-forms into constituent 1-forms, but we can always express a k-form in terms of the basis covectors. So, for any k-form $\omega_k$, we can write\footnote{In practice, $\omega_{ab...c}$ is a matrix defined on points} \begin{gather} \omega_k = \omega_{ab...c}e^a\wedge e^b \wedge ... \wedge e^c. \end{gather} And furthermore, we can always combine k-forms. So, if we have 1-forms $\alpha = \alpha_i e^i$ and $\beta = \beta_j e^j$, we can construct a 2-form as $\alpha\wedge\beta = \alpha_i\beta_j e^i\wedge e^j$. Simply put, k-forms are always combinable, but not always factoriazable.\footnote{This is similar to (and in fact, the math is exactly the same, involving the tensor product) the fact that in quantum mechanics, states may always be combined, but not all mixed states can be factored into constituent pure states}
+We note now that we cannot always decompose k-forms into constituent 1-forms, but we can always express a k-form in terms of the basis covectors. So, for any k-form $\omega_k$, we can write\footnote{In practice, $\omega_{ab...c}$ is a matrix defined on points} \begin{gather} \omega_k = \omega_{ab...c}e^a\wedge e^b \wedge ... \wedge e^c. \end{gather} And furthermore, we can always combine k-forms. So, if we have 1-forms $\alpha = \alpha_i e^i$ and $\beta = \beta_j e^j$, we can construct a 2-form as $\alpha\wedge\beta = \alpha_i\beta_j e^i\wedge e^j$. Simply put, k-forms are always combinable, but not always factorizable.\footnote{This is similar to (and in fact, the math is exactly the same, involving the tensor product) the fact that in quantum mechanics, states may always be combined, but not all mixed states can be factored into constituent pure states}
 
 Working in a space with specified coordinates allows us to solve real problems. For instance, in section 2.2 we got slightly ahead of ourselves by describing the oscillation of a mass on a spring with specific coordinates without yet having them defined. Now, with the tools in this section, such a problem is possible to solve.  
 
@@ -519,7 +519,7 @@ So, \begin{gather}
 \begin{gather} \implies  \frac{\partial x^i}{\partial \hat{x}^j} \omega_i = \omega_j.
 \end{gather}
 
-Components of vectors transform in similar ways. If we have that $v = v^i e_i$, then $v^i$ will transform as \begin{gather}\hat{v}^j = v^i \frac{\partial \hat{x}^j}{\partial x^i} \end{gather} In general, an object that has such a relationship with objects in other coordinate systems are called \textbf{tensors}. 
+Components of vectors transform in similar ways. If we have that $v = v^i e_i$, then $v^i$ will transform as \begin{gather}\hat{v}^j = v^i \frac{\partial \hat{x}^j}{\partial x^i} \end{gather} In general, an object that has such a relationship with objects in other coordinate systems is called a \textbf{tensor}. 
 
 
 
@@ -622,7 +622,7 @@ We also found before that any boundary functional's boundary functional is the z
 	A k-form \textbf{$\omega$} is \textbf{closed} if $\eth\omega = 0$. 
 \end{defn}
 
-The fact that $f$ was exact necessarily lead to the fact that $f$ is also closed. 
+The fact that $f$ was exact necessarily led to the fact that $f$ is also closed. 
 
 \begin{prop}
 	All exact forms are also closed forms.
